src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) double TickMeter_getLastTimeMilli_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getLastTimeSec_0(void* self);
extern "C" __declspec(dllexport) int64 TickMeter_getCounter_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getFPS_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getAvgTimeSec_0(void* self);
extern "C" __declspec(dllexport) double TickMeter_getAvgTimeMilli_0(void* self);
extern "C" __declspec(dllexport) void TickMeter_reset_0(void* self);
extern "C" __declspec(dllexport) void cuda_BufferPool_Delete(void* self);
extern "C" __declspec(dllexport) void* cuda_BufferPool_New_0(void* stream);
extern "C" __declspec(dllexport) void* cuda_BufferPool_getBuffer_0(void* self, int rows, int cols, int type);
extern "C" __declspec(dllexport) void* cuda_BufferPool_getBuffer_1(void* self, cv::Size size, int type);
extern "C" __declspec(dllexport) void* cuda_BufferPool_getAllocator_0(void* self);
extern "C" __declspec(dllexport) void cuda_DeviceInfo_Delete(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_New_0();
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_New_1(int device_id);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_deviceID_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_totalGlobalMem_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_sharedMemPerBlock_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_regsPerBlock_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_warpSize_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_memPitch_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxThreadsPerBlock_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxThreadsDim_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxGridSize_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_clockRate_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_totalConstMem_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_majorVersion_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_minorVersion_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_textureAlignment_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_texturePitchAlignment_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_multiProcessorCount_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_kernelExecTimeoutEnabled_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_integrated_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_canMapHostMemory_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_computeMode_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxTexture1D_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxTexture1DMipmap_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxTexture1DLinear_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture2D_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture2DMipmap_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture2DLinear_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture2DGather_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture3D_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxTextureCubemap_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture1DLayered_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTexture2DLayered_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxTextureCubemapLayered_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxSurface1D_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxSurface2D_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxSurface3D_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxSurface1DLayered_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxSurface2DLayered_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_maxSurfaceCubemap_0(void* self);
extern "C" __declspec(dllexport) void* cuda_DeviceInfo_maxSurfaceCubemapLayered_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_DeviceInfo_surfaceAlignment_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_concurrentKernels_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_ECCEnabled_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_pciBusID_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_pciDeviceID_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_pciDomainID_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_tccDriver_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_asyncEngineCount_0(void* self);
extern "C" __declspec(dllexport) bool cuda_DeviceInfo_unifiedAddressing_0(void* self);
extern "C" __declspec(dllexport) int cuda_DeviceInfo_memoryClockRate_0(void* self);