src/OpenCV5Sharp/Generated/NativeMethods.Core.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double TickMeter_getLastTimeMilli_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double TickMeter_getLastTimeSec_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long TickMeter_getCounter_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double TickMeter_getFPS_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double TickMeter_getAvgTimeSec_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double TickMeter_getAvgTimeMilli_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TickMeter_reset_0(TickMeterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_BufferPool_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_BufferPool_New_0(IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_BufferPool_getBuffer_0(CudaBufferPoolHandle self, int rows, int cols, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_BufferPool_getBuffer_1(CudaBufferPoolHandle self, Size size, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_BufferPool_getAllocator_0(CudaBufferPoolHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cuda_DeviceInfo_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_New_1(int device_id);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_deviceID_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_totalGlobalMem_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_sharedMemPerBlock_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_regsPerBlock_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_warpSize_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_memPitch_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxThreadsPerBlock_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxThreadsDim_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxGridSize_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_clockRate_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_totalConstMem_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_majorVersion_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_minorVersion_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_textureAlignment_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_texturePitchAlignment_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_multiProcessorCount_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_kernelExecTimeoutEnabled_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_integrated_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_canMapHostMemory_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_computeMode_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxTexture1D_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxTexture1DMipmap_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxTexture1DLinear_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture2D_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture2DMipmap_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture2DLinear_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture2DGather_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture3D_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxTextureCubemap_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture1DLayered_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTexture2DLayered_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxTextureCubemapLayered_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxSurface1D_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxSurface2D_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxSurface3D_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxSurface1DLayered_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxSurface2DLayered_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_maxSurfaceCubemap_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cuda_DeviceInfo_maxSurfaceCubemapLayered_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long cuda_DeviceInfo_surfaceAlignment_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_concurrentKernels_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_ECCEnabled_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_pciBusID_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_pciDeviceID_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_pciDomainID_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_tccDriver_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_asyncEngineCount_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cuda_DeviceInfo_unifiedAddressing_0(CudaDeviceInfoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cuda_DeviceInfo_memoryClockRate_0(CudaDeviceInfoHandle self);
